--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,16 @@
   background: #333333;
   font-weight: 400;
   color: white;
-  padding: 0rem 5.6rem;
   margin-bottom: 0;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   z-index: -1;
+}
+
+.intro-title {
+  margin-bottom: 3.2rem;
+  text-align: left;
+  max-width: 37.5em
 }
