--- a/src/App.css
+++ b/src/App.css
@@ -21,10 +21,6 @@
 }
 
 @media (min-width: 800px) {
-  /* setPadding("0rem 5.6rem")
-  //             setFontSize("3.5rem")
-  //
-               setTextAlign("left") */
   #intro {
     padding: 0rem 5.6rem!important;
     text-align: left!important;
@@ -35,13 +31,26 @@
   }
 }
 
-@media (min-width: 300px) {
-  /* setPadding("0 1.6rem")
-  //             setFontSize("2.5rem")
-  //             setTextAlign("center") */
+@media (min-width: 400px) {
   #intro {
-    padding: 0 1.6rem;
-    font-size: 2.5rem;
+    padding: 0 1.2rem;
     text-align: center;
+  }
+
+  #intro h1{
+    font-size: 2.5rem;
+
+  }
+}
+
+@media (max-width: 399px ) {
+  #intro {
+    padding: 0 1.2rem;
+    text-align: center;
+  }
+
+  #intro h1{
+    font-size: 2.0rem;
+
   }
 }
